# sicli

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: congrat.py
sicli/: __init__.py  argument.py  exceptions.py  main.py  types.py  utils.py
tests/: test_main.py
